Kubernetes/FreshRSS/yamls/freshrss.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: freshrss
  labels:
    name: freshrss
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: freshrss
  labels:
    app: freshrss
    app.kubernetes.io/name: freshrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
        app.kubernetes.io/name: freshrss
    spec:
      containers:
        - name: freshrss
          image: freshrss/freshrss
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
          - mountPath: /var/www/FreshRSS/data
            name: freshrss-data
          - mountPath: /var/www/FreshRSS/extensions
            name: freshrss-extensions
      volumes:
      - name: freshrss-data
        persistentVolumeClaim:
          claimName: freshrss-data
      - name: freshrss-extensions
        persistentVolumeClaim:
          claimName: freshrss-extensions
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: freshrss
  name: freshrss
  namespace: freshrss
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: freshrss
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-freshrss-https-redirect
  namespace: freshrss
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-freshrss-security
  namespace: freshrss
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-freshrss-websecure
  namespace: freshrss 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`freshrss.domain.com`)
      services:
        - name: freshrss
          port: 80
          serversTransport: traefik-freshrss-transport
      middlewares:
        - name: traefik-freshrss-security
  tls:
    secretName: freshrss-domain-com
    options:
      name: traefik-freshrss-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-freshrss-web
  namespace: freshrss
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`freshrss.domain.com`)
      services:
        - name: freshrss
          port: 80
      middlewares:
        - name: traefik-freshrss-https-redirect
